# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: check_answer.py  cli.py  engine.py  find_gcd.py  game.py  game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py  greeting.py  is_even.py  is_prime.py  make_equation.py  make_game.py  make_progression.py  print_rules.py  run_game.py
brain_games/games/: __init__.py  calc.py  even.py  game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py  gcd.py  prime.py  progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
games/: game_even.py  make_game.py
