[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Small collection of games for wating your time and my hexlet practise. :)"
authors = ["Gennadii Gorshkov <gorshkovgena@gmail.com>"]
packages = [
  { include = "brain_games" },
  { include = "games" }
]
classifiers = [
    "Topic :: Games/Entertainment"
]
repository = "https://github.com/gorshkovga/python-project-lvl1"

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
